--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ edition = "2018"
 
 [dependencies]
 clap = {version = "~2.33.3", features = ["yaml"]}
+serde = "1.0.125"
 serde_json = "1.0.64"
 base64 = "0.13.0"
