--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2018"
 
 [dependencies]
 clap = {version = "~2.33.3", features = ["yaml"]}
-serde = "1.0.125"
+serde = {version = "1.0.125", features = ["derive"]}
 serde_json = "1.0.64"
 base64 = "0.13.0"
+log = "0.4.14"
+log4rs = {version = "1.0.0", features = ["json_encoder", "console_appender", "file_appender"]}
