Added in task logging for other tasks.
Added in util file for handling some of the code for
getting the logging data. One example is the username.
Added new task log structures that can be serialized
to json for each of the task types.
Made it so main only logs to stdout and the task files
log to tasks.log

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,4 @@ serde = {version = "1.0.125", features = ["derive"]}
 serde_json = "1.0.64"
 base64 = "0.13.0"
 log = "0.4.14"
-log4rs = {version = "1.0.0", features = ["json_encoder", "console_appender", "file_appender"]}
+log4rs = {version = "1.0.0", features = ["json_encoder", "console_appender", "file_appender", "threshold_filter"]}
