--- a/log.yaml
+++ b/log.yaml
@@ -2,13 +2,20 @@ refresh_rate: 30 seconds
 appenders:
   stdout:
     kind: console
+    encoder:
+      pattern: "{m}{n}"
   tasks:
     kind: file
     path: "tasks.log"
     encoder:
-      pattern: "{d} - {m}{n}"
+      pattern: "{m}{n}"
 root:
-  level: info
+  level: warn
   appenders:
     - stdout
-    - tasks
+loggers:
+  rc::ops:
+    level: info
+    appenders:
+      - tasks
+    additive: false
